[package]
name = "procbins"
version = "0.2.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.16.4"
zip = "0.5.11"
argparse = "0.2.2"
regex = "1.4.3"
log = "0.4"
colog = "1.0.0"
path-slash = "0.1.4"
